@@ -545,6 +545,7 @@ export.database: exports database structure and data to xml files.
         </fileset>
       </classpath>
       <link href="http://docs.oracle.com/javase/7/docs/api/"/>
+      <arg value="--add-modules=java.activation,java.xml.ws.annotation" />
     </javadoc>
   </target>
 
